CN/modules/ROOT/pages/v3.2/3.adoc

:sectnums:
:sectnumlevels: 5

:imagesdir: ./_images

= **快速开始**

== 环境要求

** 硬件要求 
|====
|配置参数|最低配置|推荐配置
|CPU|4核|16核
|内存|4GB|64GB
|存储|800MB，机械硬盘|5GB以上，SSD或NvMe
|网络|千兆网络|万兆网络
|====

** 软件要求

+

IvorySQL数据库目前支持的操作系统包括但不限于CentOS 7.X和CentOS 8.X。

[[快速安装]]
== 快速安装 
....
  快速开始所使用的操作系统为CentOS 7.9。
....
=== 从yum源安装IvorySQL数据库

** 安装前准备

+

安装前请先创建一个用户，并赋予其root权限， 安装和使用均以该用户执行。这里以ivorysql用户为例。
https://www.ionos.com/help/server-cloud-infrastructure/server-administration/creating-a-sudo-enabled-user[如何创建sudo用户]

** 下载安装

+

执行以下命令安装：
```
$ sudo yum install -y https://yum.highgo.ca/dists/ivorysql-rpms/repo/ivorysql-release-3.0-1.noarch.rpm

$ sudo yum install -y ivorysql3 ivorysql3-server ivorysql3-contrib ivorysql3-test --skip-broken
```
....

  正确安装后，数据库将被安装在/usr/local/ivorysql路径下的ivorysql-version(如:ivorysql-3)文件夹内
....

执行以下命令为ivorysql用户赋权：
```
$ sudo chown -R ivorysql:ivorysql /usr/local/ivorysql
```
[[配置环境变量]]
** 配置环境变量

+

将以下配置写入~/.bash_profile文件并使用source命令该文件使环境变量生效：
```
PATH=/usr/local/ivorysql/ivorysql-3/bin:$PATH
export PATH
LD_LIBRARY_PATH=/usr/local/ivorysql/ivorysql-3/lib
export LD_LIBRARY_PATH
PGDATA=/usr/local/ivorysql/ivorysql-3/data
export PGDATA
```
```
$ source ~/.bash_profile
```

** 数据库初始化

```
$ initdb -D /usr/local/ivorysql/ivorysql-3/data
```
....
  其中-D参数用来指定数据库的数据目录。更多参数使用方法，请使用initdb --help命令获取。
....

** 启动数据库服务

```
$ pg_ctl -D /usr/local/ivorysql/ivorysql-3/data -l ivory.log start 
```

其中-D参数用来指定数据库的数据目录，如果<<配置环境变量>> 配置了PGDATA，则该参数可以省略。-l参数用来指定日志目录。更多参数使用方法，请使用pg_ctl --help命令获取。


查看确认数据库启动成功：
```
$ ps -ef | grep postgres
ivorysql  3214     1  0 20:35 ?        00:00:00 /usr/local/ivorysql/ivorysql-3/bin/postgres -D /usr/local/ivorysql/ivorysql-3/data
ivorysql  3215  3214  0 20:35 ?        00:00:00 postgres: checkpointer 
ivorysql  3216  3214  0 20:35 ?        00:00:00 postgres: background writer 
ivorysql  3218  3214  0 20:35 ?        00:00:00 postgres: walwriter 
ivorysql  3219  3214  0 20:35 ?        00:00:00 postgres: autovacuum launcher 
ivorysql  3220  3214  0 20:35 ?        00:00:00 postgres: logical replication launcher 
ivorysql  3238  1551  0 20:35 pts/0    00:00:00 grep --color=auto postgres
```

=== docker方式运行

** 从Docker Hub上获取IvorySQL镜像
```
$ docker pull ivorysql/ivorysql:3.2-ubi8
```

** 运行IvorySQL
```
$ docker run --name ivorysql -p 5434:5432 -e IVORYSQL_PASSWORD=your_password -d ivorysql/ivorysql:3.2-ubi8
```

** 查看IvorySQL容器运行是否成功
```
$ docker ps | grep ivorysql
CONTAINER ID   IMAGE               COMMAND                   CREATED          STATUS          PORTS                              NAMES
6faa2d0ed705   ivorysql:3.2-ubi8   "docker-entrypoint.s…"   50 seconds ago   Up 49 seconds   5866/tcp, 0.0.0.0:5434->5432/tcp   ivorysql
```

== 数据库连接

psql连接数据库：
```
$ psql -d <database>
psql (16.2)
Type "help" for help.

ivorysql=#
```
....
  其中-d参数用来指定想要连接到的数据库名称。IvorySQL默认使用ivorysql数据库，但较低版本的IvorySQL首次使用时需用户先连接postgres数据库，然后自己创建ivorysql数据库。较高版本的IvorySQL则已为用户创建好ivorysql数据库，可以直接连接。

  更多参数使用方法，请使用psql --help命令获取。
....

TIP: Docker运行IvorySQL时，需要添加额外参数，如 psql -d ivorysql -U ivorysql -h 127.0.0.1 -p 5434

现在可以开始使用IvorySQL啦！就是这么简单！

想要获得更多安装方式，请参考xref:v3.2/6.adoc[安装指南]